fix: reactive streams improvements
- Replace throw inside .map() with Mono.error() in flatMap()
- Replace synchronous throws before reactive chain with Mono.error()
- Remove AtomicReference anti-pattern in getAllTicketPurchasesByDate()
- Remove redundant flatMapMany(Flux::just) -> use .flux() or direct flatMapMany
- Remove unnecessary collectList()+flatMapMany(fromIterable) buffering
- Fix dead nonNull check inside flatMap in returnMonoErrorIfExists()
- Fix isNull check inside .map() replaced with switchIfEmpty